labs/examples/design-patterns-examples/src/com/examples/design/solid/d/good/WindowsPC.java
package com.examples.design.solid.d.good;

public class WindowsPC {

  private final Keyboard keyboard;
  private final Monitor monitor;

  public WindowsPC(Keyboard keyboard, Monitor monitor) {
    this.keyboard = keyboard;
    this.monitor = monitor;
  }
}
