labs/examples/design-patterns-examples/src/com/examples/design/solid/d/bad/WindowsPC.java
package com.examples.design.solid.d.bad;

public class WindowsPC {

  private final StandardKeyboard keyboard;
  private final Monitor monitor;

  public WindowsPC() {

    monitor = new Monitor();
    keyboard = new StandardKeyboard();

  }

}
